Added inputs needed to construct the docker image with java 17 + unix2dos command to handle line endings in the future while constructing the image